[gd_scene format=3 uid="uid://cuwlb204ygt3w"]

[ext_resource type="Script" uid="uid://b2nbgv37whj7v" path="res://Scripts/MenusScripts/PauseMenu.gd" id="1_6xxwp"]
[ext_resource type="Texture2D" uid="uid://dbp1xtw7oj7bn" path="res://Assets/gui/PNG/Pause menu/BTN MENU.png" id="2_gadwm"]

[node name="SettingsMenu" type="Control" unique_id=597736606]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xxwp")

[node name="Label" type="Label" parent="." unique_id=777294010]
layout_mode = 0
offset_left = 434.0
offset_top = 76.0
offset_right = 712.0
offset_bottom = 116.0
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1633118030]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -97.0
offset_right = 125.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer" unique_id=1100496646]
layout_mode = 2
text = "Continue
"

[node name="ExitToMainMenuButton" type="Button" parent="VBoxContainer" unique_id=311748801]
visible = false
layout_mode = 2
text = "
"

[node name="ExitToMainMenuButton2" type="TextureButton" parent="VBoxContainer" unique_id=1031305797]
layout_mode = 2
texture_normal = ExtResource("2_gadwm")
stretch_mode = 3

[node name="ExitButton" type="Button" parent="VBoxContainer" unique_id=283333107]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitToMainMenuButton" to="." method="_on_exit_to_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitToMainMenuButton2" to="." method="_on_exit_to_main_menu_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
